--- a/src/main/resources/templates/thymleaf-form1.html
+++ b/src/main/resources/templates/thymleaf-form1.html
@@ -43,6 +43,7 @@
 	</div>
 	
 	<!--Thymeleaf : Dynamic parsing-->
+	<div th:replace = "Thymeleaf-base-fragment::footer4(${title},${serviceInvoker})"></div>
 	
 	<!--Thymeleaf : Inheritance Template-->
 	
