--- a/src/main/resources/templates/Thymeleaf-base-fragment.html
+++ b/src/main/resources/templates/Thymeleaf-base-fragment.html
@@ -1,32 +1,37 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8" />
 	<title>Document</title>
 </head>
+
 <body>
-	<footer th:fragment = "footer1">
+	<footer th:fragment="footer1">
 		<div>
 			<li>This is the content of a base fragment for replace </li>
-		</div>		
+		</div>
 	</footer>
-	
-		<footer th:fragment = "footer2">
+
+	<footer th:fragment="footer2">
 		<div>
 			<li>This is the content of a base fragment for insert </li>
-		</div>		
+		</div>
 	</footer>
-	
-		<footer th:fragment = "footer3">
+
+	<footer th:fragment="footer3">
 		<div>
 			<li>This is the content of a base fragment for include </li>
-		</div>		
+		</div>
 	</footer>
-	<footer th:fragment = "footer4(title,serviceInvoker)">
+	<footer th:fragment="footer4(title,serviceInvoker)">
 		<div>
-			<li th:text = "'The title is: '+${title}"></li>
-			<li th:text = "'The Invoker  is: '+${serviceInvoker}"></li>
-		</div>		
+			<li th:text="'The title is: '+${title}"></li>
+			<li th:text="'The Invoker  is: '+${serviceInvoker}"></li>
+		</div>
 	</footer>
+	<h1>This is a common Header</h1>
+
 </body>
+
 </html>
